[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Base/door.png" type="Texture" id=1]
[ext_resource path="res://Assets/Base/door_closed.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Props/Door.gd" type="Script" id=3]
[ext_resource path="res://Assets/Base/door_name.png" type="Texture" id=4]
[ext_resource path="res://Assets/Base/door_hand_scanner.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Objects/Interactive.gd" type="Script" id=6]
[ext_resource path="res://Assets/Base/door_keypad.png" type="Texture" id=7]
[ext_resource path="res://Assets/Base/door_correct.wav" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Objects/Flicker2.gd" type="Script" id=9]
[ext_resource path="res://Assets/Base/light_smol.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sounds/vent_open.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Base/door_open_new.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 64 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 64 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 2, -64, -4, -64, -4, 64, 2, 64 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -44, -63, 44, -63, 44, -96, -44, -96 )

[sub_resource type="OccluderPolygon2D" id=8]
polygon = PoolVector2Array( -48, 62, -48, 63, 48, 63, 48, 62 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WhenClosed:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WhenClosed/MiddleTop:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WhenClosed/SideBottom:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath("WhenClosed:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WhenClosed/SideBottom:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WhenClosed/SideTop:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WhenClosed/MiddleTop:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "check_death_area"
} ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 120, 80 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 64, 20 )

[node name="Door" type="Node2D" groups=["Overrides_footstep", "SAVES"]]
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "door opens to the right"
}

[node name="WhenOpen" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TopLeft" type="Position2D" parent="WhenOpen"]
position = Vector2( -52, -64 )

[node name="BottomRight" type="Position2D" parent="WhenOpen"]
position = Vector2( 52, 64 )

[node name="WhenClosed" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="InteractionBlocker" type="StaticBody2D" parent="WhenClosed"]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WhenClosed/InteractionBlocker"]
shape = SubResource( 2 )

[node name="Door" type="StaticBody2D" parent="WhenClosed"]
visible = false
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WhenClosed/Door"]
shape = SubResource( 1 )

[node name="MiddleTop" type="LightOccluder2D" parent="WhenClosed"]
light_mask = 3
position = Vector2( 0, -32 )
scale = Vector2( 1, 0.5 )
occluder = SubResource( 3 )
light_mask = 3

[node name="MiddleBottom" type="LightOccluder2D" parent="WhenClosed"]
light_mask = 3
position = Vector2( 0, 32 )
scale = Vector2( 1, 0.5 )
occluder = SubResource( 3 )
light_mask = 3

[node name="SideBottom" type="LightOccluder2D" parent="WhenClosed"]
scale = Vector2( 1, -1 )
occluder = SubResource( 5 )

[node name="SideBottomPerm" type="LightOccluder2D" parent="WhenClosed"]
occluder = SubResource( 8 )

[node name="SideTop" type="LightOccluder2D" parent="WhenClosed"]
occluder = SubResource( 5 )

[node name="OuterOpen" type="Sprite" parent="WhenClosed"]
position = Vector2( 39, 48 )
rotation = -1.57079
texture = ExtResource( 5 )

[node name="Interactive" type="Control" parent="WhenClosed/OuterOpen"]
margin_left = -7.0
margin_top = -7.0
margin_right = 7.0
margin_bottom = 7.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}
message = "Open"

[node name="Flicker" type="Light2D" parent="WhenClosed/OuterOpen"]
texture = ExtResource( 10 )
texture_scale = 0.5
color = Color( 0.560784, 0.529412, 0.529412, 1 )
shadow_enabled = true
script = ExtResource( 9 )

[node name="OuterKeycard" type="Sprite" parent="WhenClosed"]
position = Vector2( 39, -47 )
rotation = -1.57079
texture = ExtResource( 7 )

[node name="Interactive" type="Control" parent="WhenClosed/OuterKeycard"]
anchor_left = -1.78261
anchor_top = -0.7
anchor_right = -1.6087
anchor_bottom = -0.7
margin_left = 32.0
margin_top = 7.0
margin_right = 46.0
margin_bottom = 21.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}
message = "Lock"

[node name="InnerOpen" type="Sprite" parent="WhenClosed"]
position = Vector2( -39, 48 )
rotation = 1.5708
texture = ExtResource( 5 )

[node name="Flicker" type="Light2D" parent="WhenClosed/InnerOpen"]
texture = ExtResource( 10 )
texture_scale = 0.5
color = Color( 0.560784, 0.529412, 0.529412, 1 )
shadow_enabled = true
script = ExtResource( 9 )

[node name="Interactive" type="Control" parent="WhenClosed/InnerOpen"]
margin_left = -7.0
margin_top = -7.0
margin_right = 7.0
margin_bottom = 7.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}
message = "Open"

[node name="InnerKeycard" type="Sprite" parent="WhenClosed"]
position = Vector2( -39, -48 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="Interactive" type="Control" parent="WhenClosed/InnerKeycard"]
anchor_left = -1.78261
anchor_top = -0.7
anchor_right = -1.6087
anchor_bottom = -0.7
margin_left = 32.0
margin_top = 7.0
margin_right = 46.0
margin_bottom = 21.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}
message = "Lock"

[node name="Text" type="Sprite" parent="WhenClosed"]
position = Vector2( 16, 0 )
rotation = -1.57079
texture = ExtResource( 4 )

[node name="Interactive" type="Control" parent="WhenClosed/Text"]
margin_left = -30.0
margin_top = -5.0
margin_right = 30.0
margin_bottom = 5.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
message = "Read"

[node name="Skkrt" type="AudioStreamPlayer2D" parent="WhenClosed"]
stream = ExtResource( 12 )
volume_db = 3.0
pitch_scale = 1.3
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 6 )
anims/open = SubResource( 7 )

[node name="LockedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
pitch_scale = 0.6
bus = "SFX"

[node name="Opening" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = 10.0
bus = "SFX"

[node name="EnemyAutoOpen" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyAutoOpen"]
shape = SubResource( 9 )

[node name="DeathZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( 0, -79 )
shape = SubResource( 10 )

[connection signal="interacted" from="WhenClosed/OuterOpen/Interactive" to="." method="_on_open"]
[connection signal="interacted" from="WhenClosed/OuterKeycard/Interactive" to="." method="_on_keycard"]
[connection signal="interacted" from="WhenClosed/InnerOpen/Interactive" to="." method="_on_open"]
[connection signal="interacted" from="WhenClosed/InnerKeycard/Interactive" to="." method="_on_keycard"]
[connection signal="body_entered" from="EnemyAutoOpen" to="." method="_on_EnemyAutoOpen_body_entered"]
[connection signal="body_exited" from="EnemyAutoOpen" to="." method="_on_EnemyAutoOpen_body_exited"]
